Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5436

Focus changes cause softkey area to flicker

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.6.1
    • 4.6.0
    • None
    • None
    • e55d77afa7f53562d4b9f0aebd30725e5f4fde86

    Description

      This can be seen e.g. in the Qt Line Edits example. When opening and closing the combo boxes the softkey area (i.e. command button area, cba) is flickering/blinking/flashing horribly. It seems that whenever focused widget is changed and the cba is updated then this happens.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            suistoma Jussi Suistomaa
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes